--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.3.8
   google_sign_in: ^5.2.1
   image_picker: ^0.8.4+4
+  lottie: ^1.2.1
   provider: ^6.0.0
 
 dev_dependencies:
@@ -50,3 +51,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lottiefile/
