--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^5.2.1
   image_picker: ^0.8.4+4
   lottie: ^1.2.1
+  modal_progress_hud: ^0.1.3
   provider: ^6.0.0
 
 dev_dependencies:
